--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,8 @@
 			<script src="js/jquery.1.10.2.js" type="text/javascript"></script>
 			
 			<!-- Esse js cria os efeitos nos textos, e movimentação, mais em  http://johnpolacek.github.io/scrollorama/-->
-			<script src="js/jquery.scrollorama.js" type="text/javascript"></script>
+			<script src="js/jquery.scrollorama.js" type="text/javascript"></script>			
+			
 			<!-- Esse js da o efeito de scroll suave ao navegar pela pagina -->
 			<script src="js/jquery.nicescroll.js" type="text/javascript"></script>
 			
@@ -32,6 +33,7 @@
 			
 		</style>
 		<div id="header">
+			<span></span>
 			<div id="logo">
 				<img src="images/logo_proiz.png" />
 			</div>
@@ -56,7 +58,9 @@
 				</div>
 			</div>
 			<div id="redes">
-				
+				<a href="#" class="facebook"></a>
+				<a href="#">TTT</a>
+				<a href="#">GGG</a>
 			</div>
 		</div>
 		
