Criação da tela SOBRE

--- a/index.html
+++ b/index.html
@@ -22,14 +22,26 @@
 		</tr>
 		<tr>
 			<td>Pagina detalhes do trabalho</td>
-			<td align="center">90%</td>
+			<td align="center">100%</td>
 			<td><a href="trabalhos_detalhe.html" target="_blank">Versao 1</a></td>
 		</tr>
 		<tr>
-			<td>Pagina especialidades </td>
-			<td align="center">50%</td>
+			<td>Pagina especialidades</td>
+			<td align="center">80%</td>
 			<td><a href="especialidades.html" target="_blank">Versao 1</a></td>
 		</tr>
+		<tr>
+			<td>Noticia - Integra</td>
+			<td align="center">100%</td>
+			<td><a href="noticia.html" target="_blank">Versao 1</a></td>
+		</tr>
+		<tr>
+			<td>Sobre</td>
+			<td align="center">0%</td>
+			<td><a href="sobre.html" target="_blank">Versao 1</a></td>
+		</tr>
+		
+		
 		
 	</table>
 	
